[package]
name = "cylon-armada"
version = "0.1.0"
edition = "2021"
description = "Arrow-native context store for embedding-based LLM cost optimization"
license = "Apache-2.0"

[dependencies]
# Core Cylon for SIMD primitives, CylonContext, Table, error types
cylon = { path = "/home/parallels/cylon/rust", default-features = false }

# Arrow (matching cylon's version)
arrow = { version = "57.1.0", default-features = false, features = ["ipc"] }
arrow-array = { version = "57.1.0", default-features = false }
arrow-schema = { version = "57.1.0", default-features = false }

[dev-dependencies]